--- a/mopidy.conf
+++ b/mopidy.conf
@@ -1,8 +1,9 @@
 [core]
-data_dir = /var/lib/mopidy
+data_dir = /data
+config_dir = /config
 
-[http]
-hostname = 0.0.0.0
+[local]
+media_dir = /data/media
 
-[mpd]
-hostname = 0.0.0.0
+[m3u]
+playlists_dir = /data/playlists
