set dirs back to /var/lib

--- a/mopidy.conf
+++ b/mopidy.conf
@@ -1,9 +1,8 @@
 [core]
-data_dir = /data
-config_dir = /config
+data_dir = /var/lib/mopidy
 
 [local]
-media_dir = /data/media
+media_dir = /var/lib/mopidy/media
 
 [m3u]
-playlists_dir = /data/playlists
+playlists_dir = /var/lib/mopidy/playlists
